# selfExAssement

./: .gitignore  build.bat  index.js  package-lock.json  package.json  readMe.md  temp_input.txt
Neural-Network/: CMakeLists.txt  LICENSE  README.md
Neural-Network/headers/: model.h
Neural-Network/src/: README_llama_cpp_flow.md  main.cpp
public/: index.html  style.css
